# awesome-free-mit

./: README.md  SOURCES.md  pyproject.toml  update
awesome_free_mit/: __main__.py  misc.md  scraper.py
awesome_free_mit/ist/: __init__.py  __main__.py  services.py  software.py
awesome_free_mit/libraries/: __init__.py  __main__.py  azdatabases.py  misc.md
awesome_free_mit/sipb/: __init__.py  active_project_list.py  misc.md
