[tool.poetry]
name = "awesome-free-mit"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "awesome_free_mit"}]

[tool.poetry.dependencies]
python = "^3.10"
selectolax = "^0.3.11"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
